--- a/src/shared/side-menu/side-menu.scss
+++ b/src/shared/side-menu/side-menu.scss
@@ -1,50 +1,62 @@
-div.options {
-    will-change: height;
-    transition: height .4s ease;
-    overflow-y: hidden;
-    height: 0;
-}
+// ------------------------------------ //
+// Global variables                     //
+// ------------------------------------ //
+$item-color-bg: #ccc;
+$header-color-bg: #eee;
+$animation-duration: 0.4s;
 
+// ------------------------------------ //
+// Simple items                         //
+// ------------------------------------ //
 ion-item.item-ios,
 ion-item.item-md,
 ion-item.item-wp {
+
     padding-left: 16px;
     padding-right: 16px;
+
+    &.item.item-block {
+        border-bottom: 1px solid $item-color-bg;
+    }
+    
+    & [item-left], 
+    & [item-right] {
+        margin-left: 0;
+    }
+
+    & ion-icon[item-left] + .item-inner, 
+    & ion-icon[item-left] + .item-input {
+       margin-left: 8px;
+    }
 }
 
-ion-item.header.item.item-block.item-md {
-    border-bottom: 1px solid #ccc;
-}
+// ------------------------------------ //
+// Multi level items                    //
+// ------------------------------------ //
+ion-list.accordion-menu {
 
-ion-item.item.item-block.item-md {
-    border-bottom: 1px solid #ccc;
-}
+    ion-item.header {
 
-ion-item.header {
-    background-color: #eee;
-}
+        background-color: $header-color-bg;
 
-.header-icon {
-    will-change: transform;
-    transition: transform .4s ease;
-}
+        ion-icon.header-icon {
+            will-change: transform;
+            transition: transform $animation-duration ease;
 
-.header-icon.rotate {
-    -webkit-transform: rotate(-180deg);
-    -moz-transform: rotate(-180deg);
-    -ms-transform: rotate(-180deg);
-    -o-transform: rotate(-180deg);
-    transform: rotate(-180deg);
-}
+            &.rotate {
+                -webkit-transform: rotate(-180deg);
+                -moz-transform: rotate(-180deg);
+                -ms-transform: rotate(-180deg);
+                -o-transform: rotate(-180deg);
+                transform: rotate(-180deg);
+            }
+        }
+    }
 
-.item-ios [item-left], .item-ios [item-right],
-.item-md [item-left], .item-md [item-right] {
-    margin: 9px 8px 9px 0px;
+    div.options {
+        will-change: height;
+        transition: height $animation-duration ease;
+        overflow-y: hidden;
+        height: 0;
+    }
 }
-
-.item-ios ion-icon[item-left] + .item-inner, .item-ios ion-icon[item-left] + .item-input,
-.item-md ion-icon[item-left] + .item-inner, .item-md ion-icon[item-left] + .item-input,
-.item-wp ion-icon[item-left] + .item-inner, .item-wp ion-icon[item-left] + .item-input {
-    margin-left: 8px;
-}
-
