added sub options without icons. Updated getSampleMenuOptions() method.

--- a/src/shared/side-menu/side-menu.scss
+++ b/src/shared/side-menu/side-menu.scss
@@ -14,6 +14,7 @@ ion-item.item-wp {
 
     padding-left: 16px;
     padding-right: 16px;
+    min-height: 50px;
 
     &.item.item-block {
         border-bottom: 1px solid $item-color-bg;
