update Ionic to 2.0.0 version. Added Ionic View id to README.md file. Collapse all options when closing the side menu.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<ion-menu persistent="true" [content]="content">
+<ion-menu persistent="true" [content]="content" (ionClose)="collapseMenuOptions()">
 	<ion-header>
 		<ion-toolbar color="secondary">
 			<ion-title>Menu</ion-title>
