--- a/src/shared/side-menu-content/side-menu-content.component.html
+++ b/src/shared/side-menu-content/side-menu-content.component.html
@@ -1,16 +1,16 @@
 <ion-list no-margin no-lines>
-    <template ngFor let-option [ngForOf]="options" let-i="index">
+    <ng-template ngFor let-option [ngForOf]="options" let-i="index">
 
         <!-- It is a simple option -->
-        <template [ngIf]="!option.subItems">
+        <ng-template [ngIf]="!option.subItems">
             <ion-item (click)="select(option)">
                 <ion-icon *ngIf="option.iconName" [name]="option.iconName" item-left></ion-icon>
                 {{ option.displayName }}
             </ion-item>
-        </template>
+        </ng-template>
 
         <!-- It has nested options -->
-        <template [ngIf]="option.subItems && option.subItems.length > 0">
+        <ng-template [ngIf]="option.subItems && option.subItems.length > 0">
 
             <ion-list no-margin class="accordion-menu">
                 <ion-item class="header" tappable (click)="toggleItemOptions(options, headerIcon, option.subItems.length)">
@@ -18,16 +18,16 @@
                     {{ option.displayName }}
                 </ion-item>
                 <div #options [id]="'sub-item-' + i" class="options">
-                    <template ngFor let-item [ngForOf]="option.subItems">
+                    <ng-template ngFor let-item [ngForOf]="option.subItems">
                         <ion-item (click)="select(item)">
                             <ion-icon *ngIf="item.iconName" [name]="item.iconName" item-left></ion-icon>
                             {{ item.displayName }}
                         </ion-item>
-                    </template>
+                    </ng-template>
                 </div>
             </ion-list>
 
-        </template>
+        </ng-template>
 
-    </template>
+    </ng-template>
 </ion-list>
