--- a/src/shared/side-menu-content/side-menu-content.component.scss
+++ b/src/shared/side-menu-content/side-menu-content.component.scss
@@ -6,6 +6,13 @@ $header-color-bg: #eee;
 $animation-duration: 0.4s;
 
 // ------------------------------------ //
+// Hide scroll bar in the side menu     //
+// ------------------------------------ //
+ion-menu ion-content .scroll-content::-webkit-scrollbar { 
+    display: none; 
+}
+
+// ------------------------------------ //
 // Simple items                         //
 // ------------------------------------ //
 ion-item.item-ios,
