--- a/src/shared/side-menu-content/side-menu-content.component.html
+++ b/src/shared/side-menu-content/side-menu-content.component.html
@@ -3,7 +3,7 @@
 
         <!-- It is a simple option -->
         <ng-template [ngIf]="!option.subItems">
-            <ion-item (click)="select(option)">
+            <ion-item tappable (tap)="select(option)">
                 <ion-icon *ngIf="option.iconName" [name]="option.iconName" item-left></ion-icon>
                 {{ option.displayName }}
             </ion-item>
@@ -13,13 +13,17 @@
         <ng-template [ngIf]="option.subItems && option.subItems.length > 0">
 
             <ion-list no-margin class="accordion-menu">
-                <ion-item class="header" tappable (click)="toggleItemOptions(options, headerIcon, option.subItems.length)">
-                    <ion-icon #headerIcon [id]="'header-icon-' + i" class="header-icon" [name]="option.iconName || this.arrowIcon" item-left></ion-icon>
+
+                <!-- Header -->
+                <ion-item class="header" tappable (tap)="toggleItemOptions(options, headerIcon, option.subItems.length)">
+                    <ion-icon #headerIcon class="header-icon" [name]="option.iconName || this.arrowIcon" item-left></ion-icon>
                     {{ option.displayName }}
                 </ion-item>
-                <div #options [id]="'sub-item-' + i" class="options">
+
+                <!-- Sub items -->
+                <div #options class="options">
                     <ng-template ngFor let-item [ngForOf]="option.subItems">
-                        <ion-item (click)="select(item)">
+                        <ion-item tappable (tap)="select(item)">
                             <ion-icon *ngIf="item.iconName" [name]="item.iconName" item-left></ion-icon>
                             {{ item.displayName }}
                         </ion-item>
