--- a/src/shared/side-menu-content/side-menu-content.component.html
+++ b/src/shared/side-menu-content/side-menu-content.component.html
@@ -3,7 +3,8 @@
 
         <!-- It is a simple option -->
         <ng-template [ngIf]="!option.subItems">
-            <ion-item [ngClass]="menuSettings?.showSelectedOption && option.selected ? menuSettings.selectedOptionClass : null" tappable (tap)="select(option)">
+            <ion-item [ngClass]="menuSettings?.showSelectedOption && option.selected ? menuSettings.selectedOptionClass : null" tappable
+                (tap)="select(option)">
                 <ion-icon *ngIf="option.iconName" [name]="option.iconName" item-left></ion-icon>
                 {{ option.displayName }}
             </ion-item>
@@ -15,15 +16,25 @@
             <ion-list no-margin class="accordion-menu">
 
                 <!-- Header -->
-                <ion-item class="header" [ngClass]="menuSettings?.showSelectedOption && option.selected ? menuSettings.selectedOptionClass : null" tappable (tap)="toggleItemOptions(options, headerIcon, option.subItems.length)">
-                    <ion-icon #headerIcon [id]="'header-icon-' + i" class="header-icon" [name]="option.iconName || menuSettings.arrowIcon" item-left></ion-icon>
+                <ion-item class="header" 
+                    [ngClass]="menuSettings?.showSelectedOption && option.selected ? menuSettings.selectedOptionClass : null"
+                    tappable (tap)="toggleItemOptions(options, headerIcon, option.subItems.length)">
+                    <ion-icon #headerIcon 
+                        [id]="'header-icon-' + i" class="header-icon" 
+                        [class.parent-of-selected]="option.selected" 
+                        [name]="option.iconName || menuSettings.arrowIcon"
+                        item-left></ion-icon>
                     {{ option.displayName }}
                 </ion-item>
 
                 <!-- Sub items -->
-                <div #options [id]="'sub-item-' + i" class="options">
+                <div #options [class.parent-of-selected]="option.selected" [id]="'sub-item-' + i" class="options">
                     <ng-template ngFor let-item [ngForOf]="option.subItems">
-                        <ion-item [ngClass]="menuSettings?.showSelectedOption && item.selected ? menuSettings.selectedOptionClass : null" tappable (tap)="select(item)">
+                        <ion-item 
+                            [style.padding-left]="subOptionIndentation"                             
+                            [class.no-icon]="menuSettings?.indentSubOptionsWithoutIcons && !item.iconName"
+                            [ngClass]="menuSettings?.showSelectedOption && item.selected ? menuSettings.selectedOptionClass : null"
+                            tappable (tap)="select(item)">
                             <ion-icon *ngIf="item.iconName" [name]="item.iconName" item-left></ion-icon>
                             {{ item.displayName }}
                         </ion-item>
