Added SideMenuDisplayText and SideMenuDisplayTextConditions custom decorators (related to #21). Created lazy-loaded pages for every option of the demo (related to #34)

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,8 +7,8 @@
 
 	<ion-content>
 
-		<!-- Side Menu -->
-		<side-menu-content [settings]="sideMenuSettings" [options]="options" (selectOption)="selectOption($event)"></side-menu-content>
+		<!-- side menu content -->
+		<side-menu-content [settings]="sideMenuSettings" [options]="options" (change)="onOptionSelected($event)"></side-menu-content>
 
 	</ion-content>
 </ion-menu>
