Encapsulate component styles in order to avoid issues with external ion-items

--- a/src/shared/side-menu-content/side-menu-content.component.scss
+++ b/src/shared/side-menu-content/side-menu-content.component.scss
@@ -1,80 +1,84 @@
-// ------------------------------------ //
-// Global variables                     //
-// ------------------------------------ //
-$item-color-bg: #ccc;
-$header-color-bg: #eee;
-$animation-duration: 0.3s;
+side-menu-content {
 
-// ------------------------------------ //
-// Hide scroll bar in the side menu     //
-// ------------------------------------ //
-ion-menu ion-content .scroll-content::-webkit-scrollbar { 
-    display: none; 
-}
+    // ------------------------------------ //
+    // Global variables                     //
+    // ------------------------------------ //
+    $item-color-bg: #ccc;
+    $header-color-bg: #eee;
+    $animation-duration: 0.3s;
 
-// ------------------------------------ //
-// Simple items                         //
-// ------------------------------------ //
-ion-item.item-ios,
-ion-item.item-md,
-ion-item.item-wp {
-
-    padding-left: 16px;
-    padding-right: 16px;
-    min-height: 50px;
-
-    &.item.item-block {
-        border-bottom: 1px solid $item-color-bg;
-    }
-    
-    & [item-left], 
-    & [item-right] {
-        margin-left: 0;
+    // ------------------------------------ //
+    // Hide scroll bar in the side menu     //
+    // ------------------------------------ //
+    ion-menu ion-content .scroll-content::-webkit-scrollbar { 
+        display: none; 
     }
 
-    & ion-icon[item-left] + .item-inner, 
-    & ion-icon[item-left] + .item-input {
-       margin-left: 8px;
-    }
-}
+    // ------------------------------------ //
+    // Simple items                         //
+    // ------------------------------------ //
+    ion-item.item-ios,
+    ion-item.item-md,
+    ion-item.item-wp {
 
-// ------------------------------------ //
-// Multi level items                    //
-// ------------------------------------ //
-ion-list.accordion-menu {
+        padding-left: 16px;
+        padding-right: 16px;
+        min-height: 50px;
 
-    ion-item.header {
+        &.item.item-block {
+            border-bottom: 1px solid $item-color-bg;
+        }
+        
+        & [item-left], 
+        & [item-right] {
+            margin-left: 0;
+        }
 
-        background-color: $header-color-bg;
-
-        ion-icon.header-icon {
-            will-change: transform;
-            transition: transform $animation-duration ease;
-
-            &.rotate {
-                -webkit-transform: rotate(-180deg);
-                -moz-transform: rotate(-180deg);
-                -ms-transform: rotate(-180deg);
-                -o-transform: rotate(-180deg);
-                transform: rotate(-180deg);
-            }
+        & ion-icon[item-left] + .item-inner, 
+        & ion-icon[item-left] + .item-input {
+        margin-left: 8px;
         }
     }
 
-    div.options {
-        will-change: height;
-        transition: height $animation-duration ease;
-        overflow-y: hidden;
-        height: 0;
-    }
+    // ------------------------------------ //
+    // Multi level items                    //
+    // ------------------------------------ //
+    ion-list.accordion-menu {
 
-    // Sub options without icons
-    ion-item.item.item-block.item-ios.no-icon .item-inner {
-        margin-left: 48px;
+        ion-item.header {
+
+            background-color: $header-color-bg;
+
+            ion-icon.header-icon {
+                will-change: transform;
+                transition: transform $animation-duration ease;
+
+                &.rotate {
+                    -webkit-transform: rotate(-180deg);
+                    -moz-transform: rotate(-180deg);
+                    -ms-transform: rotate(-180deg);
+                    -o-transform: rotate(-180deg);
+                    transform: rotate(-180deg);
+                }
+            }
+        }
+
+        div.options {
+            will-change: height;
+            transition: height $animation-duration ease;
+            overflow-y: hidden;
+            height: 0;
+        }
+
+        // Sub options without icons
+        ion-item.item.item-block.item-ios.no-icon .item-inner {
+            margin-left: 48px;
+        }
+        
+        ion-item.item.item-block.item-md.no-icon .item-inner,
+        ion-item.item.item-block.item-wp.no-icon .item-inner {
+            margin-left: 40px;
+        }
     }
     
-    ion-item.item.item-block.item-md.no-icon .item-inner,
-    ion-item.item.item-block.item-wp.no-icon .item-inner {
-        margin-left: 40px;
-    }
 }
